--- a/main.html
+++ b/main.html
@@ -477,6 +477,7 @@
                 color: white !important;
                 margin-top: -550px;
                 margin-bottom: 50px;
+                text-align: center!important;
               "
             >
               Welcome to<br />Gulbahar tobacco
@@ -572,12 +573,9 @@
           <div class="row collage">
             <div class="st__line"></div>
             <div class="content">
-              <p class="subtitle" style="color: black">
-                Unleashing the authentic essence of our brand
-              </p>
-              <a class="hover__headline --highlight">
-                <h1 class="st__headline lg" id="strategy" style="color: black">Craft</h1>
-                <h1 class="lg" id="identityMilano">Craft</h1>
+              <a class="hover__headline --highlight" style="display: block;width: 100%;text-align: center;">
+                <h1 class="st__headline lg" id="strategy" style="color: black" style="display: block;width: 100%;text-align: center;">Craft</h1>
+                <h1 class="lg" id="identityMilano" style="display: block;width: 100%;text-align: center;">Craft</h1>
               </a>
               <img
                 src="./images/Frame 1test.png"
@@ -595,9 +593,9 @@
                 alt="process-image"
                 style="top:100px;width: 350px;height: 300px;right: 65px"
               />
-              <a class="hover__headline --highlight" href="/studio#identity">
-                <h1 class="st__headline lg" id="identity" style="color: black">Supply</h1>
-                <h1 class="lg" id="identityCavallo">Supply</h1>
+              <a class="hover__headline --highlight" href="/studio#identity" style="display: block;width: 100%;text-align: center;">
+                <h1 class="st__headline lg" id="identity" style="display: block;width: 100%;text-align: center;color: black">Supply</h1>
+                <h1 class="lg" id="identityCavallo" style="display: block;width: 100%;text-align: center;">Supply</h1>
               </a>
               <img
                 src="./images/Frame 3distribution.png"
@@ -615,9 +613,9 @@
                 alt="process-image"
                 style="top:150px;width: 350px;height: 300px;right: -25px"
               />
-              <a class="hover__headline --highlight" href="/studio#experience">
-                <h1 class="st__headline lg" id="experience" style="color: black">Quality</h1>
-                <h1 class="lg" id="identityMond">Quality</h1>
+              <a class="hover__headline --highlight" href="/studio#experience" style="display: block;width: 100%;text-align: center;">
+                <h1 class="st__headline lg" id="experience" style="display: block;width: 100%;text-align: center;color: black">Quality</h1>
+                <h1 class="lg" id="identityMond" style="display: block;width: 100%;text-align: center;">Quality</h1>
               </a>
               <img
                 src="./images/Frame 5ISO.png"
