--- a/brands.html
+++ b/brands.html
@@ -311,19 +311,7 @@
               <div class="col">
                 <div class="row__inner">
                   <div class="col__inner st__text" id="strategy">
-                    <!-- <span>001</span> -->
-                    <div class="st__plax">
-                      <!-- <img
-                        srcset="
-                          https://d33wubrfki0l68.cloudfront.net/4d283ab29903d46d14d90ba86ba6bd3342cb79ab/c3544/assets/studio/studio__services--research.webp 463w
-                        "
-                        sizes="(min-width: 1024px) 24vw, 88vw"
-                        src="https://d33wubrfki0l68.cloudfront.net/4d283ab29903d46d14d90ba86ba6bd3342cb79ab/c3544/assets/studio/studio__services--research.webp"
-                        alt="services-image"
-                        width="463"
-                        height="576"
-                        class="st__plax--inner"
-                      /> -->
+                    <div class="st__plax" id="identityMilanoVideo">
                       <video
                         class="promo cursor__hover"
                         playsinline
@@ -347,19 +335,7 @@
                   </div>
 
                   <div class="col__inner st__text" id="identity">
-                    <!-- <span>002</span> -->
-                    <div class="st__plax">
-                      <!-- <img
-                        srcset="
-                          https://d33wubrfki0l68.cloudfront.net/91060b6817c3a56059288ad1951c6783b5c5e48e/e4f9e/assets/studio/studio__services--identity.webp 463w
-                        "
-                        sizes="(min-width: 1024px) 24vw, 88vw"
-                        src="https://d33wubrfki0l68.cloudfront.net/91060b6817c3a56059288ad1951c6783b5c5e48e/e4f9e/assets/studio/studio__services--identity.webp"
-                        alt="services-image"
-                        width="463"
-                        height="576"
-                        class="st__plax--inner"
-                      /> -->
+                    <div class="st__plax" id="identityCavalloVideo">
                       <video
                         class="promo cursor__hover"
                         playsinline
@@ -382,19 +358,7 @@
                   </div>
 
                   <div class="col__inner st__text" id="experience" style="margin-top: 150px">
-                    <!-- <span>003</span> -->
-                    <div class="st__plax">
-                      <!-- <img
-                        srcset="
-                          https://d33wubrfki0l68.cloudfront.net/c403a2d9eb831985b54b06a2e1b40fc872db0b1b/4d655/assets/studio/studio__services--experience.webp 463w
-                        "
-                        sizes="(min-width: 1024px) 24vw, 88vw"
-                        src="https://d33wubrfki0l68.cloudfront.net/c403a2d9eb831985b54b06a2e1b40fc872db0b1b/4d655/assets/studio/studio__services--experience.webp"
-                        alt="services-image"
-                        width="463"
-                        height="576"
-                        class="st__plax--inner"
-                      /> -->
+                    <div class="st__plax" id="identityMondVideo">
                       <video
                         class="promo cursor__hover"
                         playsinline
@@ -486,12 +450,25 @@
         openWindow("./docs/Mond.pdf");
     });
 
+    $("#identityMondVideo").on("click", function(e){
+        e.preventDefault();
+        openWindow("./docs/Mond.pdf");
+    });
+
     $("#identityMilano").on("click", function(e){
+        e.preventDefault();
+        openWindow("./docs/Milano.pdf");
+    });
+    $("#identityMilanoVideo").on("click", function(e){
         e.preventDefault();
         openWindow("./docs/Milano.pdf");
     });
 
     $("#identityCavallo").on("click", function(e){
+        e.preventDefault();
+        openWindow("./docs/Cavallo.pdf");
+    });
+    $("#identityCavalloVideo").on("click", function(e){
         e.preventDefault();
         openWindow("./docs/Cavallo.pdf");
     });
