--- a/brands.html
+++ b/brands.html
@@ -175,6 +175,7 @@
       data-barba="container"
       data-barba-namespace="studio"
       id="smooth-wrapper"
+      style="background: #55622b;"
     >
       <main id="smooth-content">
         <section id="banner">
