--- a/main.html
+++ b/main.html
@@ -472,15 +472,15 @@
             </video>
             </div>
             <h1
-              class="top lg st__headline--spread --banner"
+              class="lg st__headline--spread --banner"
               style="
-                color: white !important;
+                color: black !important;
                 margin-top: -550px;
                 margin-bottom: 50px;
                 text-align: center!important;
               "
             >
-              Welcome to<br />Gulbahar tobacco
+              Welcome to<br />Gulbahar Tobacco
             </h1>
             <div class="row">
               <!-- <p class="subtitle">Gulbahar Group</p>
@@ -503,7 +503,7 @@
         </section>
 
         <section id="intro">
-          <h1 class="lg st__headline" style="font-size: 100px; text-align: left;">
+          <h1 class="lg st__headline" style="font-size: 100px; text-align: left; font-size: 105px;">
             We are <br />Gulbahar Tobacco,
           </h1>
           <div class="row">
