--- a/main.html
+++ b/main.html
@@ -483,8 +483,6 @@
               Welcome to<br />Gulbahar Tobacco
             </h1>
             <div class="row">
-              <!-- <p class="subtitle">Gulbahar Group</p>
-              <p class="subtitle">Based in UAE</p> -->
             </div>
             <video
               class="promo"
@@ -1264,7 +1262,7 @@
         unauthorizedMessage.style.display = 'block';
       }
       </script>
-    <script>
+    <!-- <script>
       $(document).ready(function () {
         $("#identityMond").on("click", function (e) {
           e.preventDefault();
@@ -1287,7 +1285,7 @@
           window.open("./docs/Cavallo.pdf", "_blank");
         });
       });
-    </script>
+    </script> -->
     <script>
       document
         .getElementById("getInTouchWithUs")
