--- a/careers.html
+++ b/careers.html
@@ -61,7 +61,7 @@
           <a href="contact.html">Contact</a>
         </li>
         <li class="nav-item --highlight" data-attribute-item="careers">
-          <a href="careers.html">Careers</a>
+          <a href="https://gulbahar.vercel.app/careers">Careers</a>
         </li>
 
         <li class="egg" data-attribute-item="easter-egg">
