--- a/main.html
+++ b/main.html
@@ -113,7 +113,7 @@
         </li>
 
         <li class="nav-item --highlight" data-attribute-item="careers">
-          <a href="careers.html">Careers</a>
+          <a href="https://gulbahar.vercel.app/careers">Careers</a>
         </li>
 
         <li class="egg" data-attribute-item="easter-egg">
@@ -523,8 +523,7 @@
                 distribution network, the company has manufacturing facilities
                 in the UAE and three additional countries. The brand portfolio
                 caters to all consumer classes with varying taste and style
-                preferences. also the the button about us should be changed to
-                about group and also placed below a proud part of gulbahar group
+                preferences.
               </h2>
             </div>
           </div>
@@ -562,7 +561,7 @@
 
         <section id="clients" class="bg__trigger" style="padding: 0">
           <video class="promo" playsinline muted loop autoplay>
-            <source src="./videos/home-first-video.mp4" />
+            <source src="videos/Cavallo play Blue.mp4" />
             Your browser does not support the video tag.
           </video>
         </section>
@@ -1053,7 +1052,7 @@
         </section> -->
 
         <video class="promo" playsinline muted loop autoplay>
-          <source src="videos/Cavallo play Blue.mp4" />
+          <source src="./videos/home-first-video.mp4" />
           Your browser does not support the video tag.
         </video>
         <section
