--- a/main.html
+++ b/main.html
@@ -1051,10 +1051,10 @@
           </div>
         </section> -->
 
-        <video class="promo" playsinline muted loop autoplay>
+        <!-- <video class="promo" playsinline muted loop autoplay>
           <source src="./videos/home-first-video.mp4" />
           Your browser does not support the video tag.
-        </video>
+        </video> -->
         <section
           id="testimonials"
           class="cursor__hover egg-event"
