heading back to black

--- a/main.html
+++ b/main.html
@@ -472,12 +472,10 @@
             </video>
             </div>
             <h1
-              class="lg st__headline--spread --banner"
+              class="top lg st__headline--spread --banner"
               style="
-                color: black !important;
                 margin-top: -550px;
                 margin-bottom: 50px;
-                text-align: center!important;
               "
             >
               Welcome to<br />Gulbahar Tobacco
