--- a/main.html
+++ b/main.html
@@ -477,6 +477,7 @@
                 margin-top: -550px;
                 margin-bottom: 50px;
               "
+              id="home-main-banner"
             >
               Welcome to<br />Gulbahar Tobacco
             </h1>
@@ -588,7 +589,7 @@
                 alt="process-image"
                 style="top:35px;width: 350px;height: 300px;right: 65px"
               />
-              <a class="hover__headline --highlight" href="/studio#identity" style="display: block;width: 100%;text-align: center;">
+              <a class="hover__headline --highlight" style="display: block;width: 100%;text-align: center;">
                 <h1 class="st__headline lg" id="identity" style="display: block;width: 100%;text-align: center;color: black">Supply</h1>
                 <h1 class="lg" id="identityCavallo" style="display: block;width: 100%;text-align: center;">Supply</h1>
               </a>
@@ -608,7 +609,7 @@
                 alt="process-image"
                 style="top:70px;width: 350px;height: 300px;right: -25px"
               />
-              <a class="hover__headline --highlight" href="/studio#experience" style="display: block;width: 100%;text-align: center;">
+              <a class="hover__headline --highlight" style="display: block;width: 100%;text-align: center;">
                 <h1 class="st__headline lg" id="experience" style="display: block;width: 100%;text-align: center;color: black">Quality</h1>
                 <h1 class="lg" id="identityMond" style="display: block;width: 100%;text-align: center;">Quality</h1>
               </a>
