--- a/main.html
+++ b/main.html
@@ -580,6 +580,7 @@
                 class="strategy minor"
                 alt="process-image"
                 style="top: 125px;width: 300px;height: 300px;"
+                id="clients-image1"
               />
               <img
                 src="./images/Frame 2test.png"
@@ -588,6 +589,7 @@
                 class="strategy major"
                 alt="process-image"
                 style="top:35px;width: 350px;height: 300px;right: 65px"
+                id="clients-image2"
               />
               <a class="hover__headline --highlight" style="display: block;width: 100%;text-align: center;">
                 <h1 class="st__headline lg" id="identity" style="display: block;width: 100%;text-align: center;color: black">Supply</h1>
@@ -600,6 +602,7 @@
                 class="identity minor"
                 alt="process-image"
                 style="top: -85px;width: 300px;height: 300px; left: -90px;"
+                id="clients-image3"
               />
               <img
                 src="./images/Frame 4distribution.png"
@@ -608,6 +611,7 @@
                 class="identity major"
                 alt="process-image"
                 style="top:70px;width: 350px;height: 300px;right: -25px"
+                id="clients-image4"
               />
               <a class="hover__headline --highlight" style="display: block;width: 100%;text-align: center;">
                 <h1 class="st__headline lg" id="experience" style="display: block;width: 100%;text-align: center;color: black">Quality</h1>
@@ -620,6 +624,7 @@
                 class="experience minor"
                 alt="process-image"
                 style="width: 300px;height: 300px; top:30px; left:60px"
+                id="clients-image5"
               />
               <img
                 src="./images/Frame 6ISO.png"
@@ -628,10 +633,11 @@
                 class="experience major"
                 alt="process-image"
                 style="top:-10px;width: 350px;height: 300px;right: -25px"
+                id="clients-image6"
               />
             </div>
             <div class="st__line bottom"></div>
-          </div>
+          </div>  
 
           <!-- <header class="row">
             <div class="content">
