--- a/main.html
+++ b/main.html
@@ -1154,18 +1154,18 @@
             </div>
             <div class="entry__content">
               <div class="entry__content--body">
-                <p>
+                <p style="font-size: 17px;">
                   Our mission is to bring innovation and to conduct business
                   across the world. We endeavour to achieve the best for all our
                   stakeholders through continuous improvement and winning
                   business strategies.
                 </p>
-                <p style="font-style: italic">
+                <p style="font-style: italic;font-size: 17px;">
                   “My aim is to see our products wherever I go. I am working
                   towards that in the right earnestness”
                 </p>
                 <div class="credit">
-                  <p>Wahid Habibi</p>
+                  <p style="font-size: 17px;">Wahid Habibi</p>
                   <p class="subtitle">CEO, Gulbahar Group</p>
                 </div>
               </div>
