--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,7 @@
     >
       <main id="smooth-content">
         <section id="main">
-          <div class="row">
+          <div class="row" id="contact-form">
             <div class="col" style="border: none">
               <h1 class="headline__load lg" style="min-height: 184px">
                 Let’s reimagine what’s possible
