video issue fix

--- a/main.html
+++ b/main.html
@@ -483,6 +483,7 @@
             </h1>
             <div class="row">
             </div>
+            <div class="video-wrapper">
             <video
               class="promo"
               style="z-index: 999"
@@ -494,6 +495,7 @@
               <source src="./videos/new-vide.mp4" />
               Your browser does not support the video tag.
             </video>
+          </div>
 
             <div class="mobile btn__small"><p>Play</p></div>
           </div>
@@ -559,10 +561,12 @@
         </video> -->
 
         <section id="clients" class="bg__trigger" style="padding: 0">
+          <div class="video-wrapper">
           <video class="promo" playsinline muted loop autoplay>
             <source src="videos/Cavallo play Blue.mp4" />
             Your browser does not support the video tag.
           </video>
+        </div>
         </section>
 
         <section id="clients" class="bg__trigger" style="padding: 0; background: white;">
